bug fixed with excesive header gap in the offers section

--- a/styles/offers.module.css
+++ b/styles/offers.module.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 1rem;
+    gap: 0.5rem;
 
     padding: 1rem 0.5rem;
 
@@ -39,6 +39,28 @@
     font-weight: 500;
 
     width: 200px;
+}
+
+/* ------------------------- LINK -------------------------  */
+.link {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+
+    padding: 0.75rem 1rem;
+
+    height: fit-content;
+    width: fit-content;
+
+    background: var(--white);
+    color: var(--main);
+
+    border-radius: 4px;
+}
+
+.link svg {
+    height: 1rem;
 }
 
 /* ------------------------- GRID -------------------------  */
@@ -72,27 +94,6 @@
     aspect-ratio: 1/1;
 
     object-fit: contain;
-}
-
-.link {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-
-    padding: 0.75rem 1rem;
-
-    height: fit-content;
-    width: fit-content;
-
-    background: var(--white);
-    color: var(--main);
-
-    border-radius: 4px;
-}
-
-.link svg {
-    height: 1rem;
 }
 
 /* ------------------------- MEDIA QUERIES -------------------------  */
